2006-05-10 Scott Dattalo <scott@dattalo.com>
	* src/16bit-hexdecode.cc, src/p16x6x.h, src/i2c-ee.h,
	src/p16x6x.cc, src/p16f87x.cc, src/16bit-processors.cc,
	src/i2c-ee.cc, src/eeprom.cc, src/pir.cc, src/p16f62x.cc,
	src/pie.cc, src/pir.h, src/p16x7x.cc, src/p18x.cc, src/value.cc,
	src/eeprom.h, src/16bit-registers.cc:
	- Redesigning PIR logic. The existing design requires numerous
	manuel configurations that are subject to error. The new design
	attempts to encapsulate the PIR configuration within the PIR
	classes. 

2006-05-10 Scott Dattalo <scott@dattalo.com>
	* modules/i2c-eeprom.h, modules/i2c-eeprom.h, Makefile.am,
	src/p12x.h, src/p12x.cc: Began designing a gpsim I2C module.

2006-05-08 Borut Razem <borut.razem@siol.net>

	* extras/usart_con.cc: sync with modules/usart.cc

2006-05-08 Roy Rankin <rrankin@ihug.com.au>
	* src/comparator.h, src/comparator.cc, src/p16f62x.cc:
	- rewritten so comparator processor differences in processor class
	* src/p16x6x.cc: portc register removed from p16f62x
	* src/p16f87x.cc, src/p16f87x.h: a2d added, comparator change
	* src/16bit-processors.cc, src/p16x7x.cc src/a2dconverter.h,
	  src/a2dconverter.cc: code change for pending p16f88
	* regression/a2d/Makefile, regression/run_regression.sh,
	  regression/a2d/16f873a.lkr, regression/a2d/p16f873a.asm:
	- add a2d regression for p16f873a

2006-05-06 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.cc, src/stimuli.h, cli/cmd_stimulus.cc: Stimuli
	parameters are now initialized with Values instead of doubles.

2006-05-06 Scott Dattalo <scott@dattalo.com>
	* modules/usart.h, modules/usart.cc:
	 - Added the boolean attribute 'crlf'. If this is set true, then
	 carriage returns and line feeds will generate new lines in the
	 gui terminal window.

2006-05-06 Robert Pearce <rob@bdt-home.demon.co.uk>
	* modules/usart.h, modules/usart.cc: 
	 - Usart GUI now displays non-printable characters as <%02X>.
	 - The usart module now supports a transmit FIFO. This allows